refactor: to completely DDD architecture and add constraint with merchant